fix btn margin on small screens

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -234,6 +234,7 @@ body {
 
   border-color: $text !important;
   margin-right: 0.5rem !important;
+  margin-top: 0.5rem;
 }
 
 .project-btn:hover {
@@ -244,7 +245,7 @@ body {
 }
 
 .project-btn-container {
-  padding-top: 0.5rem;
+  padding-top: 0rem;
 }
 
 .iframeCont {
